<resources>
    <string name="app_name">LongPlay</string>

    <string name="txt_email">E-mail</string>
    <string name="txt_senha">Senha</string>
    <string name="txt_entrar">Entrar</string>
    <string name="txt_cadastrar">Cadastrar</string>
    <string name="txt_recuperar">Esqueci a senha</string>
    <string name="txt_nome">Nome</string>
    <string name="txt_repsenha">Repetir Senha</string>
    <string name="txt_enviar">Enviar</string>
    <string name="txt_voltar">Voltar</string>

    <!-- Login -->
    <string name="login_success">Login efetuado com sucesso!</string>
    <string name="email_required">E-mail obrigatório!</string>
    <string name="invalid_email">E-mail inválido!</string>
    <string name="password_required">Password obrigatório!</string>
    <string name="password_minimum_length">A senha deve ter 6 caracteres no mínimo.</string>
    <string name="password_invalid_check">A senha e a confirmação de senha devem ser iguais.</string>
    <string name="login_with_google">Entrar com Google</string>
    <string name="login">Entrar</string>
    <string name="login_to_signup">Não tem conta? Cadastre-se aqui!</string>
    <string name="login_to_forgot_password">Esqueceu a senha? Clique aqui!</string>

    <!-- Login (Firebase Errors) -->
    <string name="login_invalid_credentials">Usuário ou senha inválidos.</string>
    <string name="login_user_disabled">Conta de usuário desabilitada.</string>
    <string name="login_user_not_found">Conta não encontrada para o e-mail informado.</string>
    <string name="login_generic_error">Não foi possível efetuar login. Por favor verifique os dados</string>

    <!-- SignUp -->
    <string name="signup">Cadastrar</string>
    <string name="signup_successfully">Cadastro efetuado com sucesso!</string>
    <string name="signup_erro_passwordcheck">Senhas não coincidem!</string>

    <!-- Forgot Password -->
    <string name="forgot_text">Informe o seu e-mail de cadastro no campo abaixo e então pressione o botão enviar. Um e-mail será enviado para redefinir sua senha. Verifique sua caixa de Spam caso o e-mail não chegue na sua caixa de entrada.</string>
    <string name="reset_password_email_sent">E-mail enviado com sucesso!</string>

    <!-- Onboarding -->
    <string name="txt_comecar">Começar</string>
    <string name="txt_titulo_frag_um">Suas músicas e playlists preferidas ao seu alcance</string>
    <string name="txt_subtitulo_frag_um">Em qualquer lugar. À qualquer hora.</string>
    <string name="txt_titulo_frag_dois">Acompanhe os melhores Podcasts</string>
    <string name="txt_subtitulo_frag_dois">Nacionais e internacionais</string>
    <string name="txt_titulo_frag_tres">Compartilhe momentos com quem você gosta</string>
    <string name="txt_subtitulo_frag_tres">Comece agora gratuitamente</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>