<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TelaCadastroFragment" >

    <EditText
        android:id="@+id/ptNomeCadastro"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/txt_nome"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="77dp"
        tools:layout_editor_absoluteY="315dp" />

    <EditText
        android:id="@+id/emailCadastro"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/txt_email"
        android:inputType="textEmailAddress"
        tools:layout_editor_absoluteX="55dp"
        tools:layout_editor_absoluteY="386dp" />

    <EditText
        android:id="@+id/passwordCadastro"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/txt_senha"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="55dp"
        tools:layout_editor_absoluteY="459dp" />

    <EditText
        android:id="@+id/passwordRecCadastro"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/txt_repsenha"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="65dp"
        tools:layout_editor_absoluteY="517dp" />

    <Button
        android:id="@+id/btCadastro"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/azul"
        android:text="@string/txt_enviar"
        android:textColor="@color/brand_white"
        tools:layout_editor_absoluteX="127dp"
        tools:layout_editor_absoluteY="584dp" />

    <Button
        android:id="@+id/btVoltarCadastro"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/azul"
        android:text="@string/txt_voltar"
        android:textColor="@color/brand_white"
        tools:layout_editor_absoluteX="137dp"
        tools:layout_editor_absoluteY="667dp" />

</androidx.constraintlayout.widget.ConstraintLayout>