<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="codigoDoFragmento"
            type="br.iesb.mobile.longplay.ui.fragment.login.TelaLoginFragment" />

        <variable
            name="viewmodel"
            type="br.iesb.mobile.longplay.viewmodel.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradiente"
        tools:context=".ui.fragment.login.TelaLoginFragment">

        <EditText
            android:id="@+id/emailLogin"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="8dp"
            android:backgroundTint="@color/azul"
            android:ems="10"
            android:hint="@string/txt_email"
            android:text="@={viewmodel.email}"
            android:inputType="textEmailAddress"
            app:layout_constraintBottom_toTopOf="@+id/guideline2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/passwordLogin"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:backgroundTint="@color/azul"
            android:ems="10"
            android:hint="@string/txt_senha"
            android:text="@={viewmodel.password}"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline2" />

        <Button
            android:id="@+id/btLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/azul"
            android:text="@string/txt_entrar"
            android:onClick="@{codigoDoFragmento::fazerLogin}"
            android:textColor="@color/brand_white"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/btCadastrar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:visibility="visible" />

        <Button
            android:id="@+id/btCadastrar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/azul"
            android:text="@string/txt_cadastrar"
            android:onClick="@{codigoDoFragmento::iniciarCadastro}"
            android:textColor="@color/brand_white"
            app:layout_constraintBottom_toTopOf="@+id/tvRecuperar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvRecuperar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginEnd="64dp"
            android:layout_marginBottom="32dp"
            android:fontFamily="sans-serif"
            android:text="@string/txt_recuperar"
            android:onClick="@{codigoDoFragmento::recuperarSenha}"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display3"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="0dp"
            android:layout_height="139dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="32dp"
            android:src="@drawable/logo_longplay2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.45" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>